Fixed Share button overlapped view below it Fixed extra border around status/comment update textarea Fixed Share and Comment button should be square Fixed unexpected top border for comment update form with no comments

--- a/resources/statuses.css
+++ b/resources/statuses.css
@@ -70,6 +70,10 @@
   margin-bottom: 0;
 }
 
+.statuses-update + div {
+  clear: both;
+}
+
 .statuses-item .clearfix:after { /* adopted from Fusion */
   clear: both;
   content: ".";
@@ -105,7 +109,7 @@
   margin-top: 0;
 }
 
-.statuses-textarea-wrapper textarea {
+.statuses-textarea-wrapper textarea.form-textarea {
   border: 0 none;
   display: block;
   line-height: 1.5em;
@@ -118,6 +122,7 @@
 /* @group Buttons */
 
 .statuses-update .button {
+  border-radius: 0 0 0 0;
   border-style: solid;
   border-width: 1px;
   cursor: pointer;
