--- a/submodules/fbss_comments/fbss_comments.css
+++ b/submodules/fbss_comments/fbss_comments.css
@@ -14,6 +14,10 @@
   border-top: 2px solid #FFFFFF;
 }
 
+.statuses-subitem.fbss-comments-hide {
+  border-top-width: 0;
+}
+
 .fbss-comments-form .form-submit {
   background-color: #EEEEEE;
   border-color: #CCCCCC;
@@ -30,6 +34,7 @@
 }
 
 .fbss-comments-form .form-submit {
+  border-radius: 0 0 0 0;
   border-style: solid;
   border-width: 0 1px 1px 1px;
   cursor: pointer;
